refactor account, general cleanup
account:
- split account related functions into separate files
- include all available json fields in account type

build:
- enable debugging symbols
- be pedantic

notes:
- I've used standard include guards rather than '#pragma once'. I'm open
  to change but I think this is a +1 for portability.

asdflj

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 CC=gcc
-CFLAGS=-Wall
+CFLAGS=-Wall -pedantic -g
 LDFLAGS=-ljansson -lcurl
 
-OBJECTS=sea.o request.o
+OBJECTS=sea.o request.o account.o
 
 sea: $(OBJECTS)
 	    $(CC) $(CFLAGS) $(OBJECTS) -o sea $(LDFLAGS)
